--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 contourpy==1.3.1
 cycler==0.12.1
 filelock==3.18.0
+finnhub-python==2.4.23
 fonttools==4.56.0
 frozendict==2.4.6
 fsspec==2025.3.0
